--- a/style.css
+++ b/style.css
@@ -9,3 +9,11 @@
 #login-btn {
   box-shadow: 2px 2px 2px 1px rgba(0,0,0,.2);
 }
+
+#buzzik-logo {
+  width: 200px;
+  height: 200px;
+  box-shadow: 2px 2px 2px 1px rgba(0,0,0,.2);
+  border-radius: 10px;
+  margin: 2rem;
+}
