--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+input[name=dataType] {
+  /*uncomment this to remove the radio circles next to the buttons*/
+  /*display:none;*/
+}
 .login {
   margin-top: 5rem;
   padding: 3rem;
@@ -23,8 +27,86 @@
   margin: 2rem;
 }
 
+#flot-placeholder{
+  width:900px;
+  height:450px;
+  position:relative;
+  left: 200px;
+  margin:40px 40px 40px 40px;
+}
+
+#toolbar{
+  width:200px;
+  height:420px;
+  background-color: #dedede;
+  outline-style: solid;
+  outline-width: thin;
+  outline-color: #cdcdcd;
+  position:relative;
+  top:-490px;
+  padding: 10px 2px 10px 2px;
+}
+
+#buttonhome{
+  width:200px;
+  height:30px;
+  background-color: #dedede;
+  outline-style: solid;
+  outline-width: thin;
+  outline-color: #cdcdcd;
+  position:relative;
+  padding: 10px 2px 10px 2px;
+}
+
+#options{width:200px;
+  height: 20px;
+  background-color: #eaaa00;
+  outline-style: solid;
+  outline-width: thin;
+  outline-color: #cdcdcd;
+  position:relative;
+  top:-490px;
+  padding: 0px 1px 10px 3px;
+}
+
+
+.selections {
+  list-style-type: none;
+  margin:3px 0 3px 0;
+  padding:0;
+}
+
+.selections li {
+    float:left;
+    margin:0 5px 0 0;
+}
+
+.selections label {
+    padding:5px;
+    cursor:pointer;
+    -webkit-appearance: button;
+    /* WebKit */
+    -moz-appearance: button;
+    /* Mozilla */
+    -o-appearance: button;
+    /* Opera */
+    -ms-appearance: button;
+    /* Internet Explorer */
+    appearance: button;
+    /* CSS3 */
+}
+
+.selections label:hover {
+    background:#DDD;
+}
+
+.selected{
+  outline:1px solid red;
+}
+
 .login-input {
   width: 100%;
 }
+
 
 
