--- a/content.css
+++ b/content.css
@@ -209,6 +209,14 @@ input {
 	font-weight: bold;
 }
 
+.btn:disabled {
+	background-color: #c6c6c6;
+	
+	border-color: #c6c6c6;
+	
+	color: black;
+}
+
 .btn-4 {
 	width: 22%;
 	margin-right: 1%;
