--- a/content.css
+++ b/content.css
@@ -246,3 +246,46 @@ input {
 
 	border-color: #d4a723;
 }
+
+.help-btn {
+	width: 50%;
+	height: 100%;
+	margin: auto;
+	display: flex;
+}
+
+.help-Modal {
+  display: none;
+  position: fixed;]
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.help-Modal-Content {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 2px 20px 20px;
+  border: 1px solid #888;
+	border-radius: 5px;
+  width: 80%;
+}
+
+.close-btn {
+  color: #aaaaaa;
+  float: right;
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
