--- a/content.css
+++ b/content.css
@@ -169,9 +169,9 @@ input {
 
 #help-popup {
 	background-color: white;
-	
+
 	border-radius: 3px;
-	
+
 	position: fixed;
 	bottom: 10%;
 	top: 10%;
@@ -181,9 +181,9 @@ input {
 
 #help-popup #title {
 	color: #fcb913;
-	
+
 	position: absolute;
-	
+
 }
 
 
@@ -327,7 +327,7 @@ input {
     padding: 18px;
     width: 100%;
     text-align: left;
-    border: none;
+    /* border: none; */
     outline: none;
     transition: 0.4s;
 }
@@ -364,5 +364,10 @@ input {
 	font-size: 20px;
 }
 
-.help-ans {
+.help-list {
+	list-style-type: square;
+}
+
+.help-list li {
+	padding-bottom: 5px;
 }
