--- a/content.css
+++ b/content.css
@@ -91,6 +91,13 @@ input {
 }
 
 
+#graph-control-range-error {
+	color: #ff1111;
+	font-size: 14px;
+	text-align: center;
+}
+
+
 #graph-control-refine {
 	background-color: white;
 
@@ -144,6 +151,41 @@ input {
 	bottom: 0;
 	left: 0;
 	right: 0;
+}
+
+#graph-status {
+	display: none;
+
+	background-color: #eeeeeeb0;
+
+	color: #111111;
+	font-size: 30px;
+	text-align: center;
+
+	position: absolute;
+	top: 35%;
+	left: 20%;
+	height: 30%;
+	width: 60%;
+}
+
+#graph-status th {
+}
+
+#graph-status-message {
+	text-align: center;
+
+	position: absolute;
+	top: 20%;
+	left: 0;
+	right: 0;
+}
+
+#graph-status-progress {
+	position: absolute;
+	bottom: 20%;
+	left: 15%;
+	width: 70%;
 }
 
 
