--- a/content.css
+++ b/content.css
@@ -489,3 +489,9 @@ button:focus {
 #buzzik-help:hover .helpText{
 	opacity: 1;
 }
+
+.date-events {
+    font-family: "Arial", Arial, sans-serif;
+    font-size: 11px;
+    font-weight: bold;
+}
