Fixed font on help modal

--- a/content.css
+++ b/content.css
@@ -20,7 +20,7 @@ html {
 	--btn-border-color: #FFFFFF;
 	--help-modal-content-bg: #fefefe;
 	--accordion-bg: #eee;
-	--accordion-color: #eee;
+	--accordion-color: #444;
 	--accordion-active-bg: #0d97ff;
 	--panel-bg: #FFFFFF;
 }
